# aula20_bootcamp

./: pyproject.toml
backend/: Dockerfile  crud.py  database.py  router.py
frontend/: Dockerfile
