[tool.poetry]
name = "aula20-bootcamp"
version = "0.1.0"
description = ""
authors = ["Wagner Cavalcante <wagnerc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
